prevajalniki/naloga3/prev20/src/prev/phase/synan/PrevParser.java
// Generated from synan/PrevParser.g4 by ANTLR 4.8


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	import prev.phase.*;
	import prev.data.ast.tree.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, BOOLEAN=2, KEYWORD_BOOL=3, KEYWORD_CHAR=4, KEYWORD_DEL=5, KEYWORD_DO=6, 
		KEYWORD_ELSE=7, KEYWORD_FUN=8, KEYWORD_IF=9, KEYWORD_INT=10, KEYWORD_NEW=11, 
		KEYWORD_THEN=12, KEYWORD_TYP=13, KEYWORD_VAR=14, KEYWORD_VOID=15, KEYWORD_WHERE=16, 
		KEYWORD_WHILE=17, INTEGER=18, CHAR=19, STRING=20, POINTER=21, SYMBOL_LBR=22, 
		SYMBOL_RBR=23, SYMBOL_LCBR=24, SYMBOL_RCBR=25, SYMBOL_LSBR=26, SYMBOL_RSBR=27, 
		SYMBOL_DOT=28, SYMBOL_COMMA=29, SYMBOL_COLON=30, SYMBOL_SEMIC=31, SYMBOL_AND=32, 
		SYMBOL_OR=33, SYMBOL_EXCL=34, SYMBOL_EQ=35, SYMBOL_NEQ=36, SYMBOL_LT=37, 
		SYMBOL_GT=38, SYMBOL_LEQ=39, SYMBOL_GEQ=40, SYMBOL_STAR=41, SYMBOL_SLASH=42, 
		SYMBOL_MOD=43, SYMBOL_PLUS=44, SYMBOL_MIN=45, SYMBOL_PWR=46, SYMBOL_EQUALS=47, 
		IDENTIFIER=48, COMMENT=49, WHITESPACE=50, ERROR=51;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_typeDeclaration = 2, RULE_variableDeclaration = 3, 
		RULE_functionDeclaration = 4, RULE_type = 5, RULE_atomicType = 6, RULE_namedType = 7, 
		RULE_pointerType = 8, RULE_recordType = 9, RULE_enclosedType = 10, RULE_arrayType = 11, 
		RULE_typeRepeat = 12, RULE_relOps = 13, RULE_addOps = 14, RULE_mulOps = 15, 
		RULE_prefOps = 16, RULE_postOps = 17, RULE_constant = 18, RULE_expr = 19, 
		RULE_disjunctionExpression = 20, RULE_conjunctionExpression = 21, RULE_relationalExpression = 22, 
		RULE_additiveExpression = 23, RULE_multiplicativeExpression = 24, RULE_prefixExpression = 25, 
		RULE_postfixExpression = 26, RULE_atomicExpression = 27, RULE_constantExpression = 28, 
		RULE_variableAccess = 29, RULE_functionCall = 30, RULE_compoundExpression = 31, 
		RULE_typecastExpression = 32, RULE_enclosedExpression = 33, RULE_stmt = 34, 
		RULE_expressionStatement = 35, RULE_assignmentStatement = 36, RULE_conditionalStatement = 37, 
		RULE_loopStatement = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "typeDeclaration", "variableDeclaration", "functionDeclaration", 
			"type", "atomicType", "namedType", "pointerType", "recordType", "enclosedType", 
			"arrayType", "typeRepeat", "relOps", "addOps", "mulOps", "prefOps", "postOps", 
			"constant", "expr", "disjunctionExpression", "conjunctionExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"prefixExpression", "postfixExpression", "atomicExpression", "constantExpression", 
			"variableAccess", "functionCall", "compoundExpression", "typecastExpression", 
			"enclosedExpression", "stmt", "expressionStatement", "assignmentStatement", 
			"conditionalStatement", "loopStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'none'", null, "'boolean'", "'char'", "'del'", "'do'", "'else'", 
			"'fun'", "'if'", "'integer'", "'new'", "'then'", "'typ'", "'var'", "'void'", 
			"'where'", "'while'", null, null, null, "'nil'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'.'", "','", "':'", "';'", "'&'", "'|'", "'!'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'^'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "BOOLEAN", "KEYWORD_BOOL", "KEYWORD_CHAR", "KEYWORD_DEL", 
			"KEYWORD_DO", "KEYWORD_ELSE", "KEYWORD_FUN", "KEYWORD_IF", "KEYWORD_INT", 
			"KEYWORD_NEW", "KEYWORD_THEN", "KEYWORD_TYP", "KEYWORD_VAR", "KEYWORD_VOID", 
			"KEYWORD_WHERE", "KEYWORD_WHILE", "INTEGER", "CHAR", "STRING", "POINTER", 
			"SYMBOL_LBR", "SYMBOL_RBR", "SYMBOL_LCBR", "SYMBOL_RCBR", "SYMBOL_LSBR", 
			"SYMBOL_RSBR", "SYMBOL_DOT", "SYMBOL_COMMA", "SYMBOL_COLON", "SYMBOL_SEMIC", 
			"SYMBOL_AND", "SYMBOL_OR", "SYMBOL_EXCL", "SYMBOL_EQ", "SYMBOL_NEQ", 
			"SYMBOL_LT", "SYMBOL_GT", "SYMBOL_LEQ", "SYMBOL_GEQ", "SYMBOL_STAR", 
			"SYMBOL_SLASH", "SYMBOL_MOD", "SYMBOL_PLUS", "SYMBOL_MIN", "SYMBOL_PWR", 
			"SYMBOL_EQUALS", "IDENTIFIER", "COMMENT", "WHITESPACE", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public DeclContext decl;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(78);
				((SourceContext)_localctx).decl = decl();
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD_FUN) | (1L << KEYWORD_TYP) | (1L << KEYWORD_VAR))) != 0) );
			 Vector<AstDecl> ds = new Vector<AstDecl>(); //naredim vektor
				  ds.add(((SourceContext)_localctx).decl.ast);				// vanga zmečem deklaracije
				  ((SourceContext)_localctx).ast =  new AstTrees<AstDecl>(ds); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public TypeDeclarationContext typeDeclaration;
		public VariableDeclarationContext variableDeclaration;
		public FunctionDeclarationContext functionDeclaration;
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD_TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				((DeclContext)_localctx).typeDeclaration = typeDeclaration();
				_localctx.ast = ((DeclContext)_localctx).typeDeclaration.ast
				}
				break;
			case KEYWORD_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				((DeclContext)_localctx).variableDeclaration = variableDeclaration();
				_localctx.ast = ((DeclContext)_localctx).variableDeclaration.ast
				}
				break;
			case KEYWORD_FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				((DeclContext)_localctx).functionDeclaration = functionDeclaration();
				_localctx.ast = ((DeclContext)_localctx).functionDeclaration.ast
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public AstTypeDecl ast;
		public TypeContext type;
		public TerminalNode KEYWORD_TYP() { return getToken(PrevParser.KEYWORD_TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYMBOL_EQUALS() { return getToken(PrevParser.SYMBOL_EQUALS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(KEYWORD_TYP);
			setState(97);
			match(IDENTIFIER);
			setState(98);
			match(SYMBOL_EQUALS);
			setState(99);
			((TypeDeclarationContext)_localctx).type = type();
			_localctx.ast = ((TypeDeclarationContext)_localctx).type.ast
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public AstVarDecl ast;
		public TypeContext type;
		public TerminalNode KEYWORD_VAR() { return getToken(PrevParser.KEYWORD_VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYMBOL_COLON() { return getToken(PrevParser.SYMBOL_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(KEYWORD_VAR);
			setState(103);
			match(IDENTIFIER);
			setState(104);
			match(SYMBOL_COLON);
			setState(105);
			((VariableDeclarationContext)_localctx).type = type();
			_localctx.ast = ((VariableDeclarationContext)_localctx).type.ast
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public AstFunDecl ast;
		public TerminalNode KEYWORD_FUN() { return getToken(PrevParser.KEYWORD_FUN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYMBOL_LBR() { return getToken(PrevParser.SYMBOL_LBR, 0); }
		public TerminalNode SYMBOL_RBR() { return getToken(PrevParser.SYMBOL_RBR, 0); }
		public TerminalNode SYMBOL_COLON() { return getToken(PrevParser.SYMBOL_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SYMBOL_EQUALS() { return getToken(PrevParser.SYMBOL_EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeRepeatContext typeRepeat() {
			return getRuleContext(TypeRepeatContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(KEYWORD_FUN);
			setState(109);
			match(IDENTIFIER);
			setState(110);
			match(SYMBOL_LBR);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(111);
				typeRepeat();
				}
			}

			setState(114);
			match(SYMBOL_RBR);
			setState(115);
			match(SYMBOL_COLON);
			setState(116);
			type();
			setState(117);
			match(SYMBOL_EQUALS);
			setState(118);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public AstType ast;
		public AtomicTypeContext atomicType;
		public NamedTypeContext namedType;
		public ArrayTypeContext arrayType;
		public PointerTypeContext pointerType;
		public RecordTypeContext recordType;
		public EnclosedTypeContext enclosedType;
		public AtomicTypeContext atomicType() {
			return getRuleContext(AtomicTypeContext.class,0);
		}
		public NamedTypeContext namedType() {
			return getRuleContext(NamedTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public PointerTypeContext pointerType() {
			return getRuleContext(PointerTypeContext.class,0);
		}
		public RecordTypeContext recordType() {
			return getRuleContext(RecordTypeContext.class,0);
		}
		public EnclosedTypeContext enclosedType() {
			return getRuleContext(EnclosedTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				((TypeContext)_localctx).atomicType = atomicType();
				_localctx.ast = ((TypeContext)_localctx).atomicType.ast
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				((TypeContext)_localctx).namedType = namedType();
				_localctx.ast = ((TypeContext)_localctx).namedType.ast
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				((TypeContext)_localctx).arrayType = arrayType();
				_localctx.ast = ((TypeContext)_localctx).arrayType.ast
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				((TypeContext)_localctx).pointerType = pointerType();
				_localctx.ast = ((TypeContext)_localctx).pointerType.ast
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				((TypeContext)_localctx).recordType = recordType();
				_localctx.ast = ((TypeContext)_localctx).recordType.ast
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				((TypeContext)_localctx).enclosedType = enclosedType();
				_localctx.ast = ((TypeContext)_localctx).enclosedType.ast
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomicTypeContext extends ParserRuleContext {
		public AstAtomType ast;
		public TerminalNode KEYWORD_VOID() { return getToken(PrevParser.KEYWORD_VOID, 0); }
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public TerminalNode KEYWORD_CHAR() { return getToken(PrevParser.KEYWORD_CHAR, 0); }
		public TerminalNode KEYWORD_INT() { return getToken(PrevParser.KEYWORD_INT, 0); }
		public TerminalNode KEYWORD_BOOL() { return getToken(PrevParser.KEYWORD_BOOL, 0); }
		public AtomicTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomicType; }
	}

	public final AtomicTypeContext atomicType() throws RecognitionException {
		AtomicTypeContext _localctx = new AtomicTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atomicType);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD_VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(KEYWORD_VOID);
				setState(141);
				arrayType();
				}
				break;
			case KEYWORD_CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(KEYWORD_CHAR);
				setState(143);
				arrayType();
				}
				break;
			case KEYWORD_INT:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(KEYWORD_INT);
				setState(145);
				arrayType();
				}
				break;
			case KEYWORD_BOOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				match(KEYWORD_BOOL);
				setState(147);
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamedTypeContext extends ParserRuleContext {
		public AstNameType ast;
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public NamedTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namedType; }
	}

	public final NamedTypeContext namedType() throws RecognitionException {
		NamedTypeContext _localctx = new NamedTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_namedType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(IDENTIFIER);
			setState(151);
			arrayType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PointerTypeContext extends ParserRuleContext {
		public AstPtrType ast;
		public TerminalNode SYMBOL_PWR() { return getToken(PrevParser.SYMBOL_PWR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public PointerTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pointerType; }
	}

	public final PointerTypeContext pointerType() throws RecognitionException {
		PointerTypeContext _localctx = new PointerTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pointerType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(SYMBOL_PWR);
			setState(154);
			type();
			setState(155);
			arrayType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordTypeContext extends ParserRuleContext {
		public AstRecType ast;
		public TerminalNode SYMBOL_LCBR() { return getToken(PrevParser.SYMBOL_LCBR, 0); }
		public TypeRepeatContext typeRepeat() {
			return getRuleContext(TypeRepeatContext.class,0);
		}
		public TerminalNode SYMBOL_RCBR() { return getToken(PrevParser.SYMBOL_RCBR, 0); }
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public RecordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordType; }
	}

	public final RecordTypeContext recordType() throws RecognitionException {
		RecordTypeContext _localctx = new RecordTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_recordType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(SYMBOL_LCBR);
			setState(158);
			typeRepeat();
			setState(159);
			match(SYMBOL_RCBR);
			setState(160);
			arrayType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnclosedTypeContext extends ParserRuleContext {
		public AstType ast;
		public TerminalNode SYMBOL_LBR() { return getToken(PrevParser.SYMBOL_LBR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SYMBOL_RBR() { return getToken(PrevParser.SYMBOL_RBR, 0); }
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public EnclosedTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enclosedType; }
	}

	public final EnclosedTypeContext enclosedType() throws RecognitionException {
		EnclosedTypeContext _localctx = new EnclosedTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_enclosedType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(SYMBOL_LBR);
			setState(163);
			type();
			setState(164);
			match(SYMBOL_RBR);
			setState(165);
			arrayType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public AstArrType ast;
		public TerminalNode SYMBOL_LSBR() { return getToken(PrevParser.SYMBOL_LSBR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SYMBOL_RSBR() { return getToken(PrevParser.SYMBOL_RSBR, 0); }
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_arrayType);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				match(SYMBOL_LSBR);
				setState(168);
				expr(0);
				setState(169);
				match(SYMBOL_RSBR);
				setState(170);
				arrayType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeRepeatContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(PrevParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PrevParser.IDENTIFIER, i);
		}
		public List<TerminalNode> SYMBOL_COLON() { return getTokens(PrevParser.SYMBOL_COLON); }
		public TerminalNode SYMBOL_COLON(int i) {
			return getToken(PrevParser.SYMBOL_COLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> SYMBOL_COMMA() { return getTokens(PrevParser.SYMBOL_COMMA); }
		public TerminalNode SYMBOL_COMMA(int i) {
			return getToken(PrevParser.SYMBOL_COMMA, i);
		}
		public TypeRepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRepeat; }
	}
